syntax = "proto3";

package webrtc;

service WebRTCSignaling {
  rpc EstablishSession(SessionRequest) returns (SessionResponse) {}
  rpc ExchangeOffer(OfferRequest) returns (OfferResponse) {}
  rpc ExchangeAnswer(AnswerRequest) returns (AnswerResponse) {}
  rpc ExchangeICECandidate(ICECandidateRequest) returns (ICECandidateResponse) {}
}

message SessionRequest {
  string session_id = 1;
}

message SessionResponse {
  string session_id = 1;
}

message OfferRequest {
  string session_id = 1;
  string offer = 2;
}

message OfferResponse {
  string offer = 1;
}

message AnswerRequest {
  string session_id = 1;
  string answer = 2;
}

message AnswerResponse {
  string answer = 1;
}

message ICECandidateRequest {
  string session_id = 1;
  string candidate = 2;
}

message ICECandidateResponse {
  string candidate = 1;
}